Replace RFQ form by invisible button that places an RFQ for a fixed product.

--- a/local_modules/phi-nomenal-webapp/app/consumer/RFQForm.css
+++ b/local_modules/phi-nomenal-webapp/app/consumer/RFQForm.css
@@ -1,15 +1,11 @@
-.formElem {
-    overflow: hidden;
-
-    input {
-        float: left;
-    }
-
-    label {
-        float: left;
-        display: block;
-        width: 11em;
-        text-align: right;
-        padding-right: 1em;
-    }
+input[type=submit] {
+  -webkit-appearance: none;
+  display: block;
+  position: relative;
+  box-sizing: content-box;
+  left: 470px;
+  top: 250px;
+  width: 100px;
+  height: 32px;
+  opacity: 0;
 }
